[project]
name = "pyrumqtt"
description = "Python wrapper around rust's rumqtt library"
authors = [
    { name = "Daniel Seifert", email = "github.0gy60@passmail.net" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
universal = true
virtual = true
managed = true
dev-dependencies = []

[tool.rye.behavior]
use-uv = true

[tool.rye.workspace]
members = ["packages/pyrumqttd", "packages/pyrumqttc"]

[tool.uv.workspace]
members = ["packages/pyrumqttd", "packages/pyrumqttc"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyrumqtt"]
